--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <link rel="stylesheet" href="style.css" />
 
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-    <script type="text/javascript" src="src/sindel.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+    <script type="text/javascript" src="js/sindel.js"></script>
 
 </head>
 
@@ -130,8 +130,7 @@
     </div>
 
 <script type="text/javascript">
-    $( document ).ready( function()
-    {
+    $( document ).ready( function() {
         $( ".b-city" ).eq( 0 ).sindel( { majors_count: 4 } );
         $( ".b-city" ).eq( 1 ).sindel( { majors_count: 4, search_limit: 5 } );
         $( ".b-city" ).eq( 2 ).sindel( { minors_list_overflow: false } );
