--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <head>
 
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
-    <title>Chosen</title>
+    <title>Sindel - Select</title>
 
     <style type="text/css">
         .b-wrapper { padding: 50px; float: left; }
