--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<!--[if lt IE 9]>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" class="lt-ie9">
-<![endif]-->
-<!--[if !IE]> -->
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<!-- <![endif]-->
+<!doctype html>
+<!--[if IE 7 ]> <html lang="ru" class="no-js ie lt-ie8"> <![endif]-->
+<!--[if IE 8 ]> <html lang="ru" class="no-js ie ie8 lt-ie9"><![endif]-->
+<!--[if IE 9 ]> <html lang="ru" class="no-js ie ie9 lt-ie10"><![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html lang="ru" class="no-js"><!--<![endif]-->
 
 <head>
 
