--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
     $( document ).ready( function() {
         var city = $( ".city" );
 
-        city.eq( 0 ).sindel( { majors_count: 0 } );
-        city.eq( 1 ).sindel( { majors_count: 4, search_limit: 5 } );
-        city.eq( 2 ).sindel( { minors_list_overflow: false } );
+        city.eq( 0 ).sindel( { majorsCount: 0 } );
+        city.eq( 1 ).sindel( { majorsCount: 4, searchLimit: 5 } );
+        city.eq( 2 ).sindel( { minorsListOverflow: false } );
 
         city.eq( 0 ).sindel();
         city.eq( 1 ).sindel();
